2002-03-22  Vladimir Makarov  <vmakarov@redhat.com>
	* doc/md.texi: Add comments about usage the latency time for the
	different dependencies and about case when two or more conditions
	in different define_insn_reservations returns TRUE for an insn.

	* doc/md.texi: Add reference for automaton based pipeline
	description.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51202 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/dfa-branch/gcc/doc/tm.texi
+++ b/dfa-branch/gcc/doc/tm.texi
@@ -5332,7 +5332,8 @@ data-dependence.  If the scheduler using the automaton based pipeline
 description, the cost of anti-dependence is zero and the cost of
 output-dependence is maximum of one and the difference of latency
 times of the first and the second insns.  If these values are not
-acceptable, you could use the hook to modify them too.
+acceptable, you could use the hook to modify them too.  See also
+@pxref{Automaton pipeline description}.
 @end deftypefn
 
 @deftypefn {Target Hook} int TARGET_SCHED_ADJUST_PRIORITY (rtx @var{insn}, int @var{priority})
