2002-03-22  Eric Blake  <ebb9@email.byu.edu>
	For PR java/6026:
	* libjava.compile/PR6026.java: New file.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51208 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/libjava/testsuite/ChangeLog
+++ b/gcc-3_1-branch/libjava/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-22  Eric Blake  <ebb9@email.byu.edu>
+
+	For PR java/6026:
+	* libjava.compile/PR6026.java: New file.
+
 2002-03-21  Andrew Haley  <aph@redhat.com>
 
 	* libjava.lang/Thread_Interrupt.java (Looper.calibrate): New.
