* config/xtensa/xtensa.c (print_operand): Fix incorrect mode         passed to adjust_address.  Fix comment formatting.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51211 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-22  Bob Wilson  <bob.wilson@acm.org>
+
+	* config/xtensa/xtensa.c (print_operand): Fix incorrect mode
+	passed to adjust_address.  Fix comment formatting.
+
 2002-03-22  Alexandre Oliva  <aoliva@redhat.com>
 
 	* config/mips/mips.h (MASK_RETURN_ADDR): Define.
