2002-03-22  Tom Tromey  <tromey@redhat.com>             Andrew Haley  <aph@cambridge.redhat.com>
	* expr.c (build_field_ref): Don't build a check if the field is a
	member of `this'.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51212 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/java/ChangeLog
+++ b/gcc-3_1-branch/gcc/java/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-22  Tom Tromey  <tromey@redhat.com>
+            Andrew Haley  <aph@cambridge.redhat.com>
+
+	* expr.c (build_field_ref): Don't build a check if the field is a
+	member of `this'.
+
 2002-03-21  Eric Blake  <ebb9@email.byu.edu>
 
 	Fix for PR java/6026:
