cp/         PR C++/3656         * semantics.c (finish_base_specifier): Handle erronous base         classes.
testsuite/
        * g++.dg/inherit/template-as-base.C: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@51214 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-22  Gabriel Dos Reis  <gdr@merlin.codesourcery.com>
+
+	* g++.dg/inherit/template-as-base.C: New test.
+
 2002-03-22  Jakub Jelinek  <jakub@redhat.com>
 
 	* g++.old-deja/g++.other/dwarf2-1.C: Move...
