--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-21  Gabriel Dos Reis  <gdr@merlin.codesourcery.com>
+
+	PR C++/3656
+	* semantics.c (finish_base_specifier): Handle erronous base
+	classes. 
+
 2002-03-22  Zack Weinberg  <zack@codesourcery.com>
 
 	* error.c: Always use REAL_VALUE_TO_DECIMAL; don't test
