--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-23  Alan Modra  <amodra@bigpond.net.au>
+
+	* combine.c (simplify_comparison): When widening modes, ignore
+	sign extension on CONST_INTs.
+
 2002-03-22  Bob Wilson  <bob.wilson@acm.org>
 
 	* config/xtensa/xtensa.c (print_operand): Fix incorrect mode
