* error.c (dump_type): Be careful about implicit typenames.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@51219 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-23  Gabriel Dos Reis  <gdr@merlin.codesourcery.com>
+
+	* error.c (dump_type): Be careful about implicit typenames.
+
 2002-03-21  Gabriel Dos Reis  <gdr@merlin.codesourcery.com>
 
 	PR C++/3656
