--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-23  Zack Weinberg  <zack@codesourcery.com>
+
+	* gcc.dg/pragma-ep-3.c: Fix typo.
+
 2002-03-22  Gabriel Dos Reis  <gdr@merlin.codesourcery.com>
 
 	* g++.dg/inherit/template-as-base.C: New test.
