--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-23  Jakub Jelinek  <jakub@redhat.com>
+
+	* g++.dg/other/enum1.C: New test.
+
 2002-03-23  Zack Weinberg  <zack@codesourcery.com>
 
 	* gcc.dg/pragma-ep-3.c: Fix typo.
