* real.h (N): Special case 128 bit doubles.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@51229 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,7 @@
 2002-03-23  Alan Modra  <amodra@bigpond.net.au>
 
+	* real.h (N): Special case 128 bit doubles.
+
 	* combine.c (simplify_comparison): When widening modes, ignore
 	sign extension on CONST_INTs.
 
