--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-23  Michael Smith  <msmith@spinnakernet.com>
+
+	* java/util/GregorianCalendar.java (minimums, maximums): Correct
+	MONTH entry.  Fixes PR libgcj/6045.
+
 2002-03-23  Jeff Sturm  <jsturm@one-point.com>
 
 	* java/nat/natPlainSocketImpl.cc (write): Abort loop on error.
