* include/name-finder.h (_Jv_name_finder::myclose): New method. 	* name-finder.cc (_Jv_name_finder): Initialize file descriptors.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51236 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/libjava/ChangeLog
+++ b/gcc-3_1-branch/libjava/ChangeLog
@@ -1,3 +1,19 @@
+2002-03-23  Tom Tromey  <tromey@redhat.com>
+
+	* include/name-finder.h (_Jv_name_finder::myclose): New method.
+	* name-finder.cc (_Jv_name_finder): Initialize file descriptors.
+
+2002-03-20  Tom Tromey  <tromey@redhat.com>
+
+	* Makefile.am (libgcj_la_LDFLAGS): Use THREADLDFLAGS.
+	(jv_convert_LDFLAGS): Likewise.
+	(gij_LDFLAGS): Likewise.
+	(rmic_LDFLAGS): Likewise.
+	(rmiregistry_LDFLAGS): Likewise.
+
+	* configure.in (THREADLDFLAGS): New subst; set correctly for
+	*BSD.
+
 2002-03-23  Michael Smith  <msmith@spinnakernet.com>
 
 	* java/util/GregorianCalendar.java (minimums, maximums): Correct
