--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,16 @@
+2002-03-23  Andrew Cagney  <ac131313@redhat.com>
+
+	* doc/invoke.texi (Option Summary): Mention -Wswitch-default.
+	(Warning Options): Document -Wswitch-default.
+	* toplev.c (W_options): Add -Wswitch-default.  Update comment on
+	-Wswitch.
+	(warn_switch_default): Define variable.
+	(warn_switch): Update comment.
+	* flags.h (warn_switch_default): Declare variable.
+	(warn_switch): Update comment.
+	* stmt.c (expand_end_case): Check for and, when
+	warn_switch_no_default, warn of a missing default case.
+	
 2002-03-23  Alan Modra  <amodra@bigpond.net.au>
 
 	* real.h (N): Special case 128 bit doubles.
