--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,7 @@
+Sat Mar 23 11:18:17 2002  Andrew Cagney  <ac131313@redhat.com>
+
+	* invoke.texi (Warning Options): Mention -Wswitch-default.
+
 Thu Mar 21 18:55:41 2002  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* cp-tree.h (pushdecl, pushlevel, poplevel, set_block,
