--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-23  Andrew Cagney  <ac131313@redhat.com>
+
+	* gcc.dg/Wswitch-default.c: New test.
+
 2002-03-23  Jakub Jelinek  <jakub@redhat.com>
 
 	* g++.dg/other/enum1.C: New test.
