--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,10 @@
+2002-03-23  Toon Moene  <toon@moene.indiv.nluug.nl>
+
+	* com.c (ffecom_check_size_overflow_): Add a test
+	so that arrays too large for 32-bit byte-offset
+	addressing get caught.
+	* news.texi: Document the fixing of this problem.
+
 Sat Mar 23 11:18:17 2002  Andrew Cagney  <ac131313@redhat.com>
 
 	* invoke.texi (Warning Options): Mention -Wswitch-default.
