* config/rs6000/rs6000.h (RETURN_IN_MEMORY):  Cast to HOST_WIDE_INT         not HOST_WIDEST_INT.         (RS6000_ARG_SIZE): Remove unsigned cast of int_size_in_bytes.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@51245 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-23  David Edelsohn  <edelsohn@gnu.org>
+
+	* config/rs6000/rs6000.h (RETURN_IN_MEMORY):  Cast to HOST_WIDE_INT
+	not HOST_WIDEST_INT.
+	(RS6000_ARG_SIZE): Remove unsigned cast of int_size_in_bytes.
+
 2002-03-23  Richard Earnshaw  <rearnsha@arm.com>
 
 	PR java/5489
