* config/sparc/gmon-sol2.c (internal_mcount): Assume either         _start or _init begins the text segment.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51246 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-23  Richard Henderson  <rth@redhat.com>
+
+	* config/sparc/gmon-sol2.c (internal_mcount): Assume either
+	_start or _init begins the text segment.
+
 2002-03-23  Alan Modra  <amodra@bigpond.net.au>
 
 	* combine.c (simplify_comparison): When widening modes, ignore
