--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-24  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	* decl2.c (cxx_decode_option): Handle -E.
+	* lang-specs.h (default_compilers): Preprocess with cc1plus.
+	* lex.c (cxx_init): Exit quickly if c_common_init returns NULL.
+
 2002-03-23  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/6037
