* cppinit.c (cpp_handle_option): Set warn_endif_labels if 	-pedantic here... 	(cpp_post_options): ... not here.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@51258 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,4 +1,10 @@
 2002-03-24  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	* cppinit.c (cpp_handle_option): Set warn_endif_labels if
+	-pedantic here...
+	(cpp_post_options): ... not here.
+
+2002-03-24  Neil Booth  <neil@daikokuya.demon.co.uk>
 	    Aldy Hernandez  <aldyh@redhat.com>
 
 	Removal of separate preprocessor cpp0.
