preprocessor/3951 	* gcc.c (cpp_options): Pass -MD through as -MD not -M -MF. 	* cppinit.c (cpp_handle_option): Set no_ouput if -MD or -MMD. 	(init_dependency_output): Don't make no_output decision here.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51259 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_0-branch/gcc/ChangeLog
+++ b/gcc-3_0-branch/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2002-03-24  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	preprocessor/3951
+	* gcc.c (cpp_options): Pass -MD through as -MD not -M -MF.	
+	* cppinit.c (cpp_handle_option): Set no_ouput if -MD or -MMD.
+	(init_dependency_output): Don't make no_output decision here.
+
 2002-03-12  Bob Wilson  <bob.wilson@acm.org>
 
 	* config/xtensa/t-xtensa (CRTSTUFF_T_CFLAGS_S): Define.
